src/objects/Broker__c.object
<CustomObject>
    <fields>
        <fullName>Active_Broker__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ticked if Active</inlineHelpText>
        <label>Active Broker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIO_Membership_Expiry__c</fullName>
        <label>CIO Membership Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CIO_Membership_NO__c</fullName>
        <label>CIO Membership NO.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Broker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compensatory_Appointment__c</fullName>
        <label>Compensatory Appointment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Industry_Body__c</fullName>
        <label>Industry Body</label>
        <picklist>
            <picklistValues>
                <fullName>MFAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FBAA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MFAA_FBAA_Member_Expiry__c</fullName>
        <label>MFAA/FBAA Member Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MFAA_FBAA_Member_NO__c</fullName>
        <label>MFAA/FBAA Member NO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <label>MobilePhone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Monthly_Appointments_Required__c</fullName>
        <formula>Monthly_Target__c  -  Total_Appointments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Appointments Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Target__c</fullName>
        <defaultValue>15</defaultValue>
        <label>Monthly Target Appts</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Sync_Token__c</fullName>
        <label>Next Sync Token</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_Policy_Expiry__c</fullName>
        <label>PI Policy Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PI_Policy_NO__c</fullName>
        <label>PI Policy NO.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <inlineHelpText>Please enter 4 digit Post Code</inlineHelpText>
        <label>Postal Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Market__c</fullName>
        <label>Primary Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Brokers</relationshipLabel>
        <relationshipName>Brokers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Speciality_Skills__c</fullName>
        <label>Speciality Skills</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complex Investments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty Lending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Receive Phone Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pot 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pot 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pot 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pot 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pot 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pot 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pot 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pot 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sasha Anitei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alex Nassar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andrew Jackson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andrew Perry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andy Rajpurohit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brent Wedesweiler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameron Langton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Craig Thompson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Learn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dorian Loupis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gerry Bruno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graeme Chapman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Henry Giguere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>James Blanche</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>James Wu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Munther El-Alami</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>State_Remove__c</fullName>
        <label>State Remove</label>
        <picklist>
            <picklistValues>
                <fullName>Australian Capital Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New South Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queensland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tasmania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Victoria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Australia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Brokers</relationshipLabel>
        <relationshipName>Brokers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Allocated__c</fullName>
        <label>Total Allocated</label>
        <summaryFilterItems>
            <field>Appointment__c.Appointment_Status__c</field>
            <operation>equals</operation>
            <value>Allocated</value>
        </summaryFilterItems>
        <summaryForeignKey>Appointment__c.Broker__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Appointments__c</fullName>
        <label>Total Appointments</label>
        <summaryFilterItems>
            <field>Appointment__c.Appointment_Status__c</field>
            <operation>notEqual</operation>
            <value>&quot;&quot;</value>
        </summaryFilterItems>
        <summaryForeignKey>Appointment__c.Broker__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Cancelled__c</fullName>
        <label>Total Cancelled</label>
        <summaryFilterItems>
            <field>Appointment__c.Appointment_Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Appointment__c.Broker__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Held__c</fullName>
        <label>Total Held</label>
        <summaryFilterItems>
            <field>Appointment__c.Appointment_Status__c</field>
            <operation>equals</operation>
            <value>Appointment Held</value>
        </summaryFilterItems>
        <summaryForeignKey>Appointment__c.Broker__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_New__c</fullName>
        <label>Total New</label>
        <summaryFilterItems>
            <field>Appointment__c.Appointment_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </summaryFilterItems>
        <summaryForeignKey>Appointment__c.Broker__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_No_Show__c</fullName>
        <label>Total No Show</label>
        <summaryFilterItems>
            <field>Appointment__c.Appointment_Status__c</field>
            <operation>equals</operation>
            <value>No Show</value>
        </summaryFilterItems>
        <summaryForeignKey>Appointment__c.Broker__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Rescheduled__c</fullName>
        <label>Total Rescheduled</label>
        <summaryFilterItems>
            <field>Appointment__c.Appointment_Status__c</field>
            <operation>equals</operation>
            <value>Rescheduled</value>
        </summaryFilterItems>
        <summaryForeignKey>Appointment__c.Broker__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Broker</label>
    <listViews>
        <fullName>Active_Brokers_Detail</fullName>
        <columns>NAME</columns>
        <columns>Primary_Market__c</columns>
        <columns>Street_Address__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Email__c</columns>
        <columns>MobilePhone__c</columns>
        <columns>Channel__c</columns>
        <columns>Active_Broker__c</columns>
        <columns>Compensatory_Appointment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active_Broker__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Brokers Detail</label>
    </listViews>
    <listViews>
        <fullName>Active_Brokers_Detail_Recv_Phone_APpt</fullName>
        <columns>NAME</columns>
        <columns>Primary_Market__c</columns>
        <columns>Street_Address__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Email__c</columns>
        <columns>MobilePhone__c</columns>
        <columns>Channel__c</columns>
        <columns>Active_Broker__c</columns>
        <columns>Compensatory_Appointment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active_Broker__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Speciality_Skills__c</field>
            <operation>includes</operation>
            <value>Receive Phone Appointment</value>
        </filters>
        <label>Active Brokers Detail - Recv Phone APpt</label>
    </listViews>
    <listViews>
        <fullName>Active_Partners</fullName>
        <columns>NAME</columns>
        <columns>Primary_Market__c</columns>
        <columns>Street_Address__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Email__c</columns>
        <columns>MobilePhone__c</columns>
        <columns>Channel__c</columns>
        <columns>Active_Broker__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active_Broker__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Channel__c</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filters>
        <label>Active Partners</label>
    </listViews>
    <listViews>
        <fullName>Inactive_Brokers</fullName>
        <columns>Active_Broker__c</columns>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>MobilePhone__c</columns>
        <columns>Street_Address__c</columns>
        <columns>City__c</columns>
        <columns>State_Remove__c</columns>
        <columns>Channel__c</columns>
        <columns>Primary_Market__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active_Broker__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Brokers</label>
    </listViews>
    <listViews>
        <fullName>Partner_Brokers_All</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Primary_Market__c</columns>
        <columns>Street_Address__c</columns>
        <columns>City__c</columns>
        <columns>State_Remove__c</columns>
        <columns>Email__c</columns>
        <columns>MobilePhone__c</columns>
        <columns>Channel__c</columns>
        <columns>Active_Broker__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active_Broker__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Channel__c</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filters>
        <label>Partner Brokers - All</label>
    </listViews>
    <listViews>
        <fullName>Phone_Brokers_All</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Primary_Market__c</columns>
        <columns>Street_Address__c</columns>
        <columns>City__c</columns>
        <columns>State_Remove__c</columns>
        <columns>Email__c</columns>
        <columns>MobilePhone__c</columns>
        <columns>Channel__c</columns>
        <columns>Active_Broker__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active_Broker__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Channel__c</field>
            <operation>equals</operation>
            <value>Phone Broker</value>
        </filters>
        <label>Phone Brokers - All</label>
    </listViews>
    <nameField>
        <label>Broker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brokers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>